fixed zoom issue on firefox

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -175,11 +175,11 @@
   padding: 60px;
 }
 
-.zoomed {
-  zoom: 1.07;
-  -moz-transform: scale(3);
-  -moz-transform-origin: 0 0;
-}
+// .zoomed {
+//   zoom: 1.07;
+//   -moz-transform: scale(3);
+//   -moz-transform-origin: 0 0;
+// }
 
 .google-map {
   display: block;
